--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tree-sitter = "0.17.1"
 tree-sitter-highlight = "0.3.0"
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
+macros = { path = "macros" }
 
 [build-dependencies]
 cc = "1.0.66"
