--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 syn = { version = "1.0.60", features = ["parsing"] }
 quote = "1.0.9"
+proc-macro2 = "1.0.24"
 
 [lib]
 proc-macro = true
