--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "parsers/tree-sitter-javascript"]
-	path = parsers/tree-sitter-javascript
-	url = https://github.com/tree-sitter/tree-sitter-javascript.git
 [submodule "parsers/tree-sitter-rust"]
 	path = parsers/tree-sitter-rust
 	url = https://github.com/tree-sitter/tree-sitter-rust.git
+[submodule "parsers/tree-sitter-typescript"]
+	path = parsers/tree-sitter-typescript
+	url = git@github.com:tree-sitter/tree-sitter-typescript.git
+[submodule "parsers/tree-sitter-cpp"]
+	path = parsers/tree-sitter-cpp
+	url = git@github.com:tree-sitter/tree-sitter-cpp.git
