--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tree-sitter-bot"
+name = "tree-sitter-highlight-server"
 version = "0.1.0"
 authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tree-sitter = "0.17.1"
-tree-sitter-highlight = "0.3.0"
+tree-sitter = "0.19"
+tree-sitter-highlight = "0.19"
+tree-sitter-javascript = "0.19"
+tree-sitter-cpp = "0.19"
+tree-sitter-rust = "0.19"
+tree-sitter-python = "0.19"
+# tree-sitter-typescript = "^0.19.0"
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
 macros = { path = "macros" }
@@ -18,6 +23,7 @@ htmlescape = "0.3.1"
 resvg = "0.13.1"
 usvg = "0.13.1"
 tiny-skia = "0.4.2"
+once_cell = "1.7.2"
 
 [build-dependencies]
 cc = "1.0.66"
