--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "parsers/tree-sitter-cpp"]
 	path = parsers/tree-sitter-cpp
 	url = git@github.com:tree-sitter/tree-sitter-cpp.git
+[submodule "parsers/tree-sitter-javascript"]
+	path = parsers/tree-sitter-javascript
+	url = git@github.com:tree-sitter/tree-sitter-javascript.git
+[submodule "parsers/tree-sitter-c"]
+	path = parsers/tree-sitter-c
+	url = git@github.com:tree-sitter/tree-sitter-c.git
+[submodule "parsers/tree-sitter-haskell"]
+	path = parsers/tree-sitter-haskell
+	url = git@github.com:tree-sitter/tree-sitter-haskell.git
