--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,14 @@ tree-sitter-python = "0.19"
 # tree-sitter-typescript = "^0.19.0"
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = "1.0.62"
-macros = { path = "macros" }
-tokio = { version = "1.1", features = ["rt", "macros"] }
 futures = "0.3"
 htmlescape = "0.3.1"
 resvg = "0.13.1"
 usvg = "0.13.1"
 tiny-skia = "0.4.2"
 once_cell = "1.7.2"
+hyper = { version = "0.14.7", features = ["server", "tcp", "http1"] }
+tokio = { version = "^1", features = ["rt", "macros"] }
 
 [build-dependencies]
 cc = "1.0.66"
