--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,7 @@ tree-sitter-javascript = "0.19"
 tree-sitter-cpp = "0.19"
 tree-sitter-rust = "0.19"
 tree-sitter-python = "0.19"
-# tree-sitter-typescript = "^0.19.0"
-serde = { version = "1.0.123", features = ["derive"] }
-serde_json = "1.0.62"
-futures = "0.3"
+tree-sitter-typescript = "0.19"
 htmlescape = "0.3.1"
 resvg = "0.13.1"
 usvg = "0.13.1"
@@ -24,6 +21,8 @@ tiny-skia = "0.4.2"
 once_cell = "1.7.2"
 hyper = { version = "0.14.7", features = ["server", "tcp", "http1"] }
 tokio = { version = "^1", features = ["rt", "macros"] }
+log = "0.4.14"
+env_logger = "0.8.3"
 
 [build-dependencies]
 cc = "1.0.66"
